--- a/dplayer/package.json
+++ b/dplayer/package.json
@@ -18,7 +18,7 @@
         "dist"
     ],
     "repository": {
-        "url": "git+https://github.com/DIYgod/DPlayer.git",
+        "url": "git+https://github.com/Pearlulu/customfile/tree/master/dplayer",
         "type": "git"
     },
     "keywords": [
